--- a/app.css
+++ b/app.css
@@ -484,7 +484,7 @@
         min-width:60px;
     }
     .home-main__article-box__body{      
-        overflow: hidden;
+        overflow-y:scroll;
         height:160px;
         box-sizing: border-box;
         padding: 10px;
