--- a/app.css
+++ b/app.css
@@ -487,7 +487,7 @@
         min-width:60px;
     }
     .home-main__article-box__body{      
-        overflow-y:scroll;
+        overflow-y:auto;
         height:160px;
         box-sizing: border-box;
         padding: 10px;
@@ -518,7 +518,20 @@
        .title-bar__title-box{
            font-size:2rem;           
        }
-       
+       .searchBox {
+           margin:15px 0;
+       }
+       .searchBox > div  {
+            text-align: right;
+       }
+       .searchBox > div > input {
+           height:20px;
+       }
+       .searchBox > div > button {
+        height:20px;
+        box-sizing: content-box;
+    }
+      
        .board-list {
            margin-top:40px;
            text-align: center;
@@ -619,9 +632,26 @@
        .page-button  a:hover {
            text-decoration: underline;
        }
-       .page-button > div > ul > li > span {
+       .page-button > ul > li > .currentPage {
            font-weight: bold;
            font-size:1.4rem;
+       }
+       .page-button > ul > li > .currentPage:hover {
+        cursor: pointer;
+    }
+       .lastmovebutton {
+        justify-content: flex-start;
+           text-align:left;
+       }
+       .lastmovebutton > * {
+        text-align:left;
+    }
+       .firstmovebutton{
+           justify-content: flex-end;
+           text-align: right;
+       }
+       .firstmovebutton > div {
+           justify-content:flex-end;
        }
        /* 게시판 페이징 끝 */
        
